<resources>
	<string name="app_name">KADE Lebak</string>
	<string name="title_activity_dashboard">DashboardActivity</string>
	<string name="title_home">Home</string>
	<string name="title_dashboard">Dashboard</string>
	<string name="title_notifications">Notifications</string>
	<string name="title_complaint">Complaint</string>
	<string name="title_profile">Profile</string>

	<string name="label_complaint">Pengaduan</string>
	<string name="label_support">Bantuan</string>
	<string name="label_profile">Profil</string>
	<string name="label_forum">Forum</string>
	<string name="label_village">Informasi Desa</string>
	<string name="label_personal_number">Nomer Telepon</string>
	<string name="label_email">Email</string>
	<string name="label_birth_date">Tempat, Tgl Lahir</string>
	<string name="label_gender">Jenis Kelamin</string>
	<string name="label_position">Jabatan</string>
	<string name="label_nip">NIP</string>
	<string name="label_address_office">Alamat Kantor</string>
	<string name="label_kepala_desa">Kepala Desa</string>
	<string name="label_telepon">Telepon</string>

	<string name="label_password">Password</string>
	<string name="label_message">Pesan</string>
	<string name="label_commentar">Komentar</string>
	<string name="label_timeline">Forum Saya</string>
	<string name="label_all">Semua</string>

	<string name="anonymous">Anonymous</string>
	<string name="x_comments">%1$d Komentar</string>
	<string name="x_region">%1$s</string>
	<string name="no_comments">Belum ada komentar</string>

	<string name="home_content_news">Berita Terbaru</string>
	<string name="home_content_feature">Fitur</string>
	<string name="title_activity_profile">ProfileActivity</string>

	<string name="lorem_ipsum_text">
		"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
	</string>

	<string name="lorem_ipsum_short">
		At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
	</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_support">Support</string>
</resources>
