<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.kade_village.view.DetailVillageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/highSize250"
            android:scaleType="centerCrop"
            tools:src="@mipmap/ic_launcher_round" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSize16"
        android:layout_marginLeft="@dimen/marginSize8"
        android:layout_marginRight="@dimen/marginSize8"
        android:background="@drawable/ic_card_text_white"
        android:elevation="@dimen/cardview_default_radius"
        android:padding="@dimen/paddingSize16">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/marginSize10"
                        android:text="@string/label_kepala_desa"
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/village_head"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/marginSize10"
                        android:text="@string/label_address_office"
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/address_office"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/marginSize10"
                        android:layout_weight="1"
                        android:text="@string/label_telepon"
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/telephone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize12" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/marginSize10"
                        android:text="@string/label_email"
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize14"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textColor="@color/grey3"
                        android:textSize="@dimen/textSize12" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>